jenkins issue fixed